test/files/neg/trait_fields_var_override.check
trait_fields_var_override.scala:2: error: mutable variable cannot be overridden:
protected def end: Int (defined in trait SizeChangeEvent)
class BackedUpListIterator[E](override protected var end: Int) extends SizeChangeEvent
                                                     ^
1 error
